# El-7aress-Project-qml_mil

./: .dockerignore  .gitignore  CCIP.md  DIAGNOSTIC_REPORT.md  DOCKER_DEPLOYMENT.md  Dockerfile.dev  Dockerfile.prod  LICENSE  MIGRATION_3DM-GX3-25.md  QT6-gstreamer-example.pro  RIVA_BUILD_GUIDE.md  RIVA_COMPLETE_IMPLEMENTATION.md  RIVA_CONFIGURATION_GUIDE.md  RIVA_INTEGRATION_SUMMARY.md  agent.md  applicationcontroller.cpp  applicationcontroller.h  build_riva_protos.sh  check_servo_ports.sh  colormenucontroller.cpp  colormenucontroller.h  docker-build.sh  docker-compose.dev.yml  docker-compose.prod.yml  fix_servo_symlinks.sh  gstvideosource.h  joystick_manual_md.md  main.cpp  mainmenucontroller.cpp  menuviewmodel.cpp  menuviewmodel.h  osdviewmodel.cpp  osdviewmodel.h  post_git.md  readme.md  resources.qrc  reticlemenucontroller.cpp  reticlemenucontroller.h  riva_voice.pri  servo_regulation_report.md  (+4 more)
Features/riva_test/riva_ASR_TTS_NLU/: CMakeLists.txt  bmw_voice_control.cpp  main.cpp
Features/riva_test/riva_ASR_TTS_NLU/riva/proto/: health.grpc.pb.cc  health.grpc.pb.h  health.pb.cc  health.pb.h  riva_asr.grpc.pb.cc  riva_asr.grpc.pb.h  riva_asr.pb.cc  riva_asr.pb.h  riva_audio.grpc.pb.cc  riva_audio.grpc.pb.h  riva_audio.pb.cc  riva_audio.pb.h  riva_common.grpc.pb.cc  riva_common.grpc.pb.h  riva_common.pb.cc  riva_common.pb.h  riva_nlp.grpc.pb.cc  riva_nlp.grpc.pb.h  riva_nlp.pb.cc  riva_nlp.pb.h  riva_nmt.grpc.pb.cc  riva_nmt.grpc.pb.h  riva_nmt.pb.cc  riva_nmt.pb.h  riva_tts.grpc.pb.cc  riva_tts.grpc.pb.h  riva_tts.pb.cc  riva_tts.pb.h
config/: devices.json  zones.json
documentation/: APPENDIX_A_WEAPON_CLEARING.md  APPENDIX_B_ZONE_FILE_FORMAT.md  APPENDIX_C_BUTTON_MAPPING_QUICK_REFERENCE.md  APPENDIX_D_RETICLE_TYPES_VISUAL_GUIDE.md  APPENDIX_E_COMMUNICATION_PORT_CONFIGURATION.md  APPENDIX_F_SYSTEM_SPECIFICATIONS.md  APPENDIX_G_ACRONYMS_GLOSSARY.md  DATALOGGER_DOCUMENTATION.md  (+21 more)
(+282 files in other folders)
